--- a/full-template.html
+++ b/full-template.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="styles.css">
     <script src='session.js'></script>
+    <script src="data.js"></script>
     <title>PLACEHOLDER</title>
     <style>
       
@@ -31,4 +32,9 @@
       <p>template to copy paste</p>
     </div>
   </body>
+  <script>
+    document.addEventListener("DOMContentLoaded",()=>{window.onDataReady = () => {
+      
+    }});
+  </script>
 </html>
