--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
     <script src='session.js'></script>
-    <title>PLACEHOLDER</title>
+    <title>Impian - About Us</title>
     <style>
       /* reset styles.css */
       #main-content{
@@ -28,7 +28,10 @@
     </header>
 
     <div id='main-content'>
-      <p>info template to copy paste, all centered</p>
+      <br>
+      <p>iMPIAN.MY is a online shopping platform from Selangor Malaysia.</p>
+      <br>
+      <p>We were established in 2016, and have built a large community of over 100K shoppers and sellers.</p>
     </div>
   </body>
 </html>
