--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
     <script src='session.js'></script>
     <script src="data.js"></script>
@@ -121,7 +122,7 @@
 
         img.src = prod.image;
         name.textContent = prod.name;
-        rating.textContent = prod.avgRating.toFixed(2) + '*';
+        rating.textContent = prod.avgRating.toFixed(2) + '★';
         price.textContent = "RM " + prod.price;
         
         pdiv.append(img);
