--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
     <script src='session.js'></script>
     <script src="data.js"></script>
