--- a/confirm.html
+++ b/confirm.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src='session.js'></script>
     <script src="data.js"></script>
-    <title>PLACEHOLDER</title>
+    <title>Impian - Thank You!</title>
     <style>
       /* reset styles.css */
       #main-content{
@@ -17,6 +17,18 @@
         height: 100vh;
       }
       /* reset styles.css */
+      h1{
+        text-align: center;
+        font-size: 70px;
+      }
+      td, th{
+        border: 1px solid var(--sec-color);
+        text-overflow: ellipsis;
+      }
+      table{
+        margin: 0 auto 0 auto;
+        width: 90%;
+      }
     </style>
   </head>
 
@@ -31,7 +43,10 @@
     </header>
 
     <div id='main-content'>
-      <p>template to copy paste</p>
+      <h1>Thank you for shopping at iMPIAN.MY!</h1>
+      <table id='receiptOutput'>
+        <th colspan='5'>Purchase details:</th>
+      </table>
     </div>
   </body>
   <script>
@@ -39,9 +54,50 @@
       const params = new URLSearchParams(window.location.search);
       const address = params.get("address");
       const method = params.get("paymentMethod");
+      const table = document.getElementById('receiptOutput');
 
-      console.log(address);
-      console.log(method);
+      const rawCart = localStorage.getItem('cart');
+      const cart = rawCart ? JSON.parse(rawCart) : [];
+
+      const newReceipt = {
+        address,
+        paymentMethod: method,
+        items: cart.map(item => ({
+          id: item.id,
+          quantity: item.quantity
+        }))
+      };
+
+      const rawReceipts = localStorage.getItem('receipts');
+      const receipts = rawReceipts ? JSON.parse(rawReceipts): [];
+
+      receipts.push(newReceipt);
+
+      const headers = document.createElement("tr");
+      headers.innerHTML = `
+        <th>Shop</th>
+        <th>Product</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Total</th>
+      `;
+      table.appendChild(headers);
+
+      cart.forEach(item => {
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td>${item.shopName}</td>
+          <td>${item.name}</td>
+          <td>RM&nbsp;${item.price}</td>
+          <td>${item.quantity}</td>
+          <td>RM&nbsp;${(item.price * item.quantity).toFixed(2)}</td>
+        `;
+
+        table.appendChild(row);
+      });
+
+      localStorage.setItem('receipts', JSON.stringify(receipts));
+      localStorage.removeItem('cart');
     }});
   </script>
 </html>
