--- a/hint.html
+++ b/hint.html
@@ -271,7 +271,7 @@
     }
 
     function finish(){
-      document.body.innerHTML = 'Enter any password or name. Put \'admin\' as name to login as admin.';
+      document.body.innerHTML = "Enter any name or password. Its just a demo and theres no user validation.";
     }
   </script>
 </html>
