--- a/about.html
+++ b/about.html
@@ -1,37 +1,222 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
-    <script src='session.js'></script>
-    <title>Impian - About Us</title>
-    <style>
-      /* reset styles.css */
-      #main-content{
-        display: relative;
-        text-align: center;
-        padding: 150px 0 0 0;
-      }
-      body{
-        display: inline;
-        background-color: var(--bg-color);
-        height: 100vh;
-      }
-      /* reset styles.css */
-    </style>
-  </head>
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
+        <title>iMPIAN - About Us</title>
+        <style>
+            .container{
+                display: flex;
+                gap: 50px;
+                background: white;
+                padding: 50px;
+                border-radius: 15px;
+                box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+                max-width: 1100px;
+                margin: 0 40px;
+                align-items: flex-start;
+            }
 
+            .about{
+                flex: 1.2;
+            }
 
-  <body>
-    <header id='infobar'>
-      <a href="index.html"><img src="./media/logo.webp" id='topbar-logo'></a>
-    </header>
+            .about h2{
+                margin-bottom: 20px;
+                font-size: 12px;
+                letter-spacing: 2px;
+            }
 
-    <div id='main-content'>
-      <br>
-      <p>iMPIAN.MY is a online shopping platform from Selangor Malaysia.</p>
-      <br>
-      <p>We were established in 2016, and have built a large community of over 100K shoppers and sellers.</p>
-    </div>
-  </body>
+            .about h1{
+                color: #333;
+                font-size: 30px;
+                margin-bottom: 20px;
+                line-height: 1;
+            }
+
+            .about p{
+                color: #555;
+                line-height: 1.8;
+                font-size: 14px;
+                margin-bottom: 30px;
+                text-align: justify;
+            }
+
+            .about-details{
+                flex: 0.8;
+                display: flex;
+                flex-direction: column;
+                gap: 20px; 
+            }
+
+            .ceo-card{
+                background: #f9fbf9;
+                padding: 25px;
+                border-radius: 12px;
+                border: 1px solid #e8eee8;
+                display: flex;
+                align-items: center;
+                gap: 20px;
+            }
+
+            .ceo-img{
+                width: 90px;
+                height: 90px;
+                border-radius: 50%;
+                object-fit: cover;
+                border: 3px solid var(--prim-color);
+            }
+
+            .ceo-info p{
+                font-size: 13px;
+                font-weight: 450;
+                margin-bottom: 4px;
+            }
+
+            .ceo-info h3{
+                font-size: 15px;
+                color: #333;
+                margin-bottom: 5px;
+            }
+
+            .ceo-bio{
+                font-size: 12px;
+                color: #666;
+                font-style: italic;
+                line-height: 1.4;
+            }
+
+            .values-box{
+                background: white;
+                padding: 30px;
+                border-radius: 12px;
+                border: 1px solid #eee;
+                position: relative;
+                box-shadow: 0 5px 15px rgba(0,0,0,0.02);
+                margin-bottom: 30px;
+                width: 90%; 
+            }
+
+            .values-box::before{
+                content: '';
+                position: absolute;
+                top: 0; left: 0; right: 0;
+                height: 4px;
+                background: linear-gradient(to right, var(--prim-color), var(--sec-color));
+                border-radius: 12px 12px 0 0;
+            }
+
+            .values-box h4{
+                font-size: 13px;
+                margin-bottom: 14px;
+                text-transform: uppercase;
+                font-weight: 800;
+            }
+
+            .values-box p{
+                font-size: 13px;
+                color: #444;
+                line-height: 1.6;
+                font-style: italic;
+                text-align: left; 
+                margin-bottom: 0;
+            }
+
+            .btn{
+                display: inline-block;
+                padding: 12px 25px;
+                background: #0f172a;
+                color: rgb(231, 231, 231);
+                text-decoration: none;
+                border-radius: 8px;
+                font-size: 14px;
+                font-weight: 600;
+                transition: 0.3s;
+                margin-left: 30px;
+                box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+            }
+
+            .btn:hover{
+                background: #494949;
+            }
+        </style>
+    </head>
+    <body>
+        <header id='topbar'>  
+            <p>Flash Sale: Up to 50% Off — Shop Now!   |   Free Shipping on Orders Above RM100   |   Weekend Special: Extra 15% Off Storewide Flash Sale: Up to 50% Off — Shop Now!   |   Free Shipping on Orders Above RM100   |   Weekend Special: Extra 15% Off Storewide Flash Sale: Up to 50% Off — Shop Now!</p> 
+        </header>
+
+        <aside id='sidebar'>
+            <a id="logo" href="index.html">
+                <img src="./media/logo.webp" alt="Logo" style="width: 120px;">
+            </a>
+            
+            <a href="customer-dashboard.html"><span>🏠</span>Dashboard</a>
+            <a href="shop.html"><span>🛍️</span>Start Shopping</a>
+            <a href="cart.html"><span>🛒</span>Your Cart</a>
+            <a href="comments.html"><span>💬</span>Comments</a>
+            <a href="services.html"><span>⚙️</span>Our Services</a>
+            <a href="about.html"  class="active-link"><span>ℹ️</span>About Us</a>
+            <a href="contact.html"><span>📞</span>Contact Us</a>
+            
+            <a href="admin-login.html" class="logout-btn">Logout</a>
+        </aside>
+
+        <div id='main-content'>    
+            <div class="container">
+                <div class="about">
+                    <h2>ESTABLISHED 2016</h2>
+                    <h1>About iMPIAN</h1>
+                    <p>At iMPIAN.MY, we believe every local business deserves a digital stage. We've built a sanctuary for entrepreneurs to showcase their products, bridging the gap between traditional craftsmanship and the modern digital economy. Our mission is to empower the Malaysian spirit of innovation, one shop at a time.</p>
+
+                    <div class="values-box">
+                        <h4>Our Core Values</h4>
+                        <p>"Integrity in every transaction, Innovation in every update, and Impian in every shop we host. We build trust through honesty, drive progress with fresh ideas, and create spaces that inspire dreams and opportunities."</p>
+                        <div style="margin-top: 15px; font-size: 11px; font-weight: 400; text-align: right;">
+                            MALAYSIA BOLEH!
+                        </div>
+                    </div>
+
+                    <video src="media/ecommerce.mp4" style="width: 100%;" loop controls></video>
+                </div>
+                <div class="about-details">
+                    <div class="ceo-card">
+                        <img src="media/celia.jpg" alt="Tiana Rogers" class="ceo-img">
+                        <div class="ceo-info">
+                            <p>Founder & CEO</p>
+                            <h3>Celia Mae</h3>
+                            <div class="ceo-bio">"Bringing traditional businesses into the digital age."</div>
+                        </div>
+                    </div>
+                    <div class="ceo-card">
+                        <img src="media/tiana.avif" alt="Celia Mae" class="ceo-img">
+                        <div class="ceo-info">
+                            <p>Co-Founder & COO</p>
+                            <h3>Tiana Rogers</h3>
+                            <div class="ceo-bio">"Ensuring operational excellence for every local vendor."</div>
+                        </div>
+                    </div>
+                    <div class="ceo-card">
+                        <img src="media/merida.jpg" alt="Mike Wazowski" class="ceo-img">
+                        <div class="ceo-info">
+                            <p>CFO & CMO</p>
+                            <h3>Merida DunBroch</h3>
+                            <div class="ceo-bio">"Driving financial sustainability and brand growth for every local"</div>
+                        </div>
+                    </div>
+                    <div class="ceo-card">
+                        <img src="media/mike.jpg" alt="Mike Wazowski" class="ceo-img">
+                        <div class="ceo-info">
+                            <p>CTO</p>
+                            <h3>Mike Wazowski</h3>
+                            <div class="ceo-bio">"Innovating technology solutions and driving digital transformation"</div>
+                        </div>
+                    </div>
+                    <div class="ceo-card" style="background-color: white; border: none;">
+                        <a href="https://disney.fandom.com/wiki/Celia_Mae" target="_blank" class="btn">Learn More About Celia Mae →</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
